# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--1.0
#

2004-10-24 02:43:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-113

    Summary:
      Checkpointing
    Revision:
      missingh--head--1.0--patch-113


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Client.hs
     libsrc/MissingH/Network/FTP/Parser.hs


2004-10-24 01:37:22 GMT	John Goerzen <jgoerzen@complete.org>	patch-112

    Summary:
      Added some IO and network utilities
    Revision:
      missingh--head--1.0--patch-112


    modified files:
     ChangeLog libsrc/MissingH/IO.hs libsrc/MissingH/Network.hs


2004-10-23 22:54:00 GMT	John Goerzen <jgoerzen@complete.org>	patch-111

    Summary:
      Basic commands now work
    Revision:
      missingh--head--1.0--patch-111


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Client.hs


2004-10-23 22:18:24 GMT	John Goerzen <jgoerzen@complete.org>	patch-110

    Summary:
      retrlines is working
    Revision:
      missingh--head--1.0--patch-110


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Client.hs
     libsrc/MissingH/Network/FTP/Parser.hs


2004-10-23 21:03:06 GMT	John Goerzen <jgoerzen@complete.org>	patch-109

    Summary:
      Checkpointing
    Revision:
      missingh--head--1.0--patch-109


    modified files:
     ChangeLog Makefile libsrc/MissingH/List.hs
     libsrc/MissingH/Network/FTP/Client.hs
     libsrc/MissingH/Network/FTP/Parser.hs libsrc/MissingH/Str.hs
     testsrc/Listtest.hs testsrc/Network/FTP/Parsertest.hs


2004-10-23 19:54:14 GMT	John Goerzen <jgoerzen@complete.org>	patch-108

    Summary:
      Checkpointing
    Revision:
      missingh--head--1.0--patch-108


    modified files:
     ChangeLog libsrc/MissingH/Network.hs
     libsrc/MissingH/Network/FTP/Client.hs
     libsrc/MissingH/Network/FTP/Parser.hs


2004-10-23 19:18:39 GMT	John Goerzen <jgoerzen@complete.org>	patch-107
